[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/digitalix.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Mail.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -2.0
margin_right = 1095.0
margin_bottom = 745.0

[node name="Mail1" type="Button" parent="VBoxContainer"]
margin_right = 1097.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 1"
align = 0

[node name="Mail2" type="Button" parent="VBoxContainer"]
margin_top = 91.0
margin_right = 1097.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 2"
align = 0

[node name="Mail3" type="Button" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 1097.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 3"
align = 0

[node name="Mail4" type="Button" parent="VBoxContainer"]
margin_top = 273.0
margin_right = 1097.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 4"
align = 0

[node name="Mail5" type="Button" parent="VBoxContainer"]
margin_top = 364.0
margin_right = 1097.0
margin_bottom = 451.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 5"
align = 0

[node name="Mail6" type="Button" parent="VBoxContainer"]
margin_top = 455.0
margin_right = 1097.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 6"
align = 0

[node name="Mail7" type="Button" parent="VBoxContainer"]
margin_top = 546.0
margin_right = 1097.0
margin_bottom = 633.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 7"
align = 0

[node name="Mail8" type="Button" parent="VBoxContainer"]
margin_top = 637.0
margin_right = 1097.0
margin_bottom = 724.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 8"
align = 0

[node name="Mail9" type="Button" parent="VBoxContainer"]
margin_top = 728.0
margin_right = 1097.0
margin_bottom = 815.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 9"
align = 0

[node name="Mail10" type="Button" parent="VBoxContainer"]
margin_top = 819.0
margin_right = 1097.0
margin_bottom = 906.0
custom_fonts/font = SubResource( 1 )
text = "MAIL 10"
align = 0

[node name="Close" type="Button" parent="."]
margin_left = 1100.0
margin_top = 7.0
margin_right = 1262.0
margin_bottom = 143.0
text = "X"

[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
